WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136689
AX: aria-labelledby is not honoring sub-node text
https://bugs.webkit.org/show_bug.cgi?id=136689
Summary
AX: aria-labelledby is not honoring sub-node text
chris fleizach
Reported
2014-09-09 17:55:15 PDT
If something is labelled by a group of elements, and some of those elements are contained in sub-nodes, then all the text is not concatenated. <
rdar://problem/17955424
>
Attachments
patch
(4.06 KB, patch)
2014-09-09 18:00 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-09-09 18:00:05 PDT
Created
attachment 237874
[details]
patch
WebKit Commit Bot
Comment 2
2014-09-10 07:47:11 PDT
Comment on
attachment 237874
[details]
patch Clearing flags on attachment: 237874 Committed
r173459
: <
http://trac.webkit.org/changeset/173459
>
WebKit Commit Bot
Comment 3
2014-09-10 07:47:15 PDT
All reviewed patches have been landed. Closing bug.
James Craig
Comment 4
2014-09-10 13:51:58 PDT
These test cases are wrong. Generic groups (like your a and b divs) should not traverse their contents to calculate an accessible name. This is going to regress from some things. I'd recommend rolling this out and let me give you more robust test examples.
James Craig
Comment 5
2014-09-10 13:52:58 PDT
Actually we can probably just patch it rather than rolling it out. I'll clone.
James Craig
Comment 6
2014-09-10 14:06:04 PDT
bug 136689
James Craig
Comment 7
2014-09-10 14:06:31 PDT
whoops,
bug 136714
chris fleizach
Comment 8
2014-09-10 14:24:28 PDT
(In reply to
comment #4
)
> These test cases are wrong. Generic groups (like your a and b divs) should not traverse their contents to calculate an accessible name. This is going to regress from some things. > > I'd recommend rolling this out and let me give you more robust test examples.
What spec are you referring to? This returns current behavior to what it used to do. We used to gather all the textUnderElement(). The fix was to restore that behavior
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug