AX: aria-labelledby is not honoring sub-node text https://bugs.webkit.org/show_bug.cgi?id=136689

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Test: accessibility/aria-labelledby-with-descendants.html

When aria-labelledby retrieves the textUnderElements it needs to consider
all sub-children, including focusable content.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::accessibleNameForNode):

LayoutTests:

* accessibility/aria-labelledby-with-descendants-expected.txt: Added.
* accessibility/aria-labelledby-with-descendants.html: Added.


Canonical link: https://commits.webkit.org/154508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173459 268f45cc-cd09-0410-ab3c-d52691b4dbfc